--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "EditGuru"
-version = "0.1.0"
+version = "0.1.1"
 description = "A CLI tool for file manipulation / editing via LLM"
 readme = "README.md"
 authors = [{ name = "Sully", email = "sully@sadburger.com" }]
@@ -29,6 +29,7 @@ dependencies = [
     "openai",
     "pandas",
     "pydantic>2",
+    "requests",
 ]
 
 [project.scripts]
@@ -66,7 +67,7 @@ line-length = 120
 target-version = "py310"
 
 [tool.bumpver]
-current_version = "0.1.0"
+current_version = "0.1.1"
 version_pattern = "MAJOR.MINOR.PATCH"
 commit_message = "Bump version {old_version} -> {new_version}"
 commit = true
@@ -75,7 +76,7 @@ push = false
 
 [tool.bumpver.file_patterns]
 "pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
-"main.py" = ['package_version = "{version}"']
+"src/edit_guru/main.py" = ['package_version = "{version}"']
 "README.md" = ["**Latest Version:** {version}"]
 
 [tool.pytest.ini_options]
