Update dependencies and enhance AI developer agent configuration
- Bump `supersullytools` version to `>=9` in `pyproject.toml` and `9.0.0` in `requirements.dev.txt`.
- Import `CompletionModel` in `ai_developer` module.
- Modify `ai_developer_agent` to accept a `CompletionModel` parameter.
- Add `plan-model` and `model` options to `main` command in `main.py`.
- Implement model validation and selection logic for agents.
- Enable `bedrock` in `CompletionHandler` configuration.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
     "openai",
     "rich",
     "simplesingletable",
-    "supersullytools",
+    "supersullytools>=9",
     "logzero",
     "jsonref",
     "numpy",
