--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -170,6 +170,7 @@ readme-renderer==44.0
     # via twine
 requests==2.32.3
     # via
+    #   EditGuru (pyproject.toml)
     #   requests-toolbelt
     #   twine
 requests-toolbelt==1.0.0
@@ -191,7 +192,7 @@ sniffio==1.3.1
     #   anyio
     #   httpx
     #   openai
-supersullytools==8.3.0
+supersullytools==9.0.0
     # via EditGuru (pyproject.toml)
 toml==0.10.2
     # via bumpver
