--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -6,25 +6,25 @@
 #
 annotated-types==0.7.0
     # via pydantic
-anyio==4.6.2.post1
+anyio==4.8.0
     # via
     #   httpx
     #   openai
-attrs==24.2.0
+attrs==25.1.0
     # via pytest-docker
 backports-tarfile==1.2.0
     # via jaraco-context
-boto3==1.35.59
+boto3==1.37.0
     # via
     #   EditGuru (pyproject.toml)
     #   simplesingletable
-boto3-stubs==1.35.59
+boto3-stubs==1.37.0
     # via EditGuru (pyproject.toml)
-botocore==1.35.59
+botocore==1.37.0
     # via
     #   boto3
     #   s3transfer
-botocore-stubs==1.35.59
+botocore-stubs==1.36.26
     # via boto3-stubs
 build==1.2.2.post1
     # via
@@ -32,21 +32,21 @@ build==1.2.2.post1
     #   pip-tools
 bumpver==2024.1130
     # via EditGuru (pyproject.toml)
-certifi==2024.8.30
+certifi==2025.1.31
     # via
     #   httpcore
     #   httpx
     #   requests
-charset-normalizer==3.4.0
+charset-normalizer==3.4.1
     # via requests
-click==8.1.7
+click==8.1.8
     # via
     #   EditGuru (pyproject.toml)
     #   bumpver
     #   pip-tools
 colorama==0.4.6
     # via bumpver
-coverage==7.6.4
+coverage==7.6.12
     # via pytest-cov
 diskcache==5.6.3
     # via EditGuru (pyproject.toml)
@@ -60,21 +60,21 @@ exceptiongroup==1.2.2
     #   pytest
 h11==0.14.0
     # via httpcore
-httpcore==1.0.6
+httpcore==1.0.7
     # via httpx
-httpx==0.27.2
+httpx==0.28.1
     # via openai
-humanize==4.11.0
+humanize==4.12.1
     # via simplesingletable
+id==1.5.0
+    # via twine
 idna==3.10
     # via
     #   anyio
     #   httpx
     #   requests
-importlib-metadata==8.5.0
-    # via
-    #   keyring
-    #   twine
+importlib-metadata==8.6.1
+    # via keyring
 iniconfig==2.0.0
     # via pytest
 invoke==2.2.0
@@ -85,7 +85,7 @@ jaraco-context==6.0.1
     # via keyring
 jaraco-functools==4.1.0
     # via keyring
-jiter==0.7.1
+jiter==0.8.2
     # via openai
 jmespath==1.0.1
     # via
@@ -93,7 +93,7 @@ jmespath==1.0.1
     #   botocore
 jsonref==1.1.0
     # via EditGuru (pyproject.toml)
-keyring==25.5.0
+keyring==25.6.0
     # via twine
 lexid==2021.1006
     # via bumpver
@@ -103,42 +103,41 @@ markdown-it-py==3.0.0
     # via rich
 mdurl==0.1.2
     # via markdown-it-py
-more-itertools==10.5.0
+more-itertools==10.6.0
     # via
     #   jaraco-classes
     #   jaraco-functools
-mypy-boto3-bedrock-runtime==1.35.56
+mypy-boto3-bedrock-runtime==1.37.0
     # via boto3-stubs
-mypy-boto3-dynamodb==1.35.54
+mypy-boto3-dynamodb==1.37.0
     # via boto3-stubs
-nh3==0.2.18
+nh3==0.2.20
     # via readme-renderer
-numpy==2.1.3
+numpy==2.2.3
     # via
     #   EditGuru (pyproject.toml)
     #   pandas
-openai==1.54.4
+openai==1.64.0
     # via EditGuru (pyproject.toml)
 packaging==24.2
     # via
     #   build
     #   pytest
+    #   twine
 pandas==2.2.3
     # via EditGuru (pyproject.toml)
 pip-tools==7.4.1
     # via EditGuru (pyproject.toml)
-pkginfo==1.10.0
-    # via twine
 pluggy==1.5.0
     # via pytest
-pydantic==2.9.2
+pydantic==2.10.6
     # via
     #   EditGuru (pyproject.toml)
     #   openai
     #   simplesingletable
-pydantic-core==2.23.4
+pydantic-core==2.27.2
     # via pydantic
-pygments==2.18.0
+pygments==2.19.1
     # via
     #   readme-renderer
     #   rich
@@ -146,7 +145,7 @@ pyproject-hooks==1.2.0
     # via
     #   build
     #   pip-tools
-pytest==8.3.3
+pytest==8.3.4
     # via
     #   EditGuru (pyproject.toml)
     #   pytest-cov
@@ -154,7 +153,7 @@ pytest==8.3.3
     #   pytest-mock
 pytest-cov==6.0.0
     # via EditGuru (pyproject.toml)
-pytest-docker==3.1.1
+pytest-docker==3.2.0
     # via EditGuru (pyproject.toml)
 pytest-mock==3.14.0
     # via EditGuru (pyproject.toml)
@@ -162,13 +161,14 @@ python-dateutil==2.9.0.post0
     # via
     #   botocore
     #   pandas
-pytz==2024.2
+pytz==2025.1
     # via pandas
 readme-renderer==44.0
     # via twine
 requests==2.32.3
     # via
     #   EditGuru (pyproject.toml)
+    #   id
     #   requests-toolbelt
     #   twine
 requests-toolbelt==1.0.0
@@ -179,34 +179,33 @@ rich==13.9.4
     # via
     #   EditGuru (pyproject.toml)
     #   twine
-s3transfer==0.10.3
+s3transfer==0.11.2
     # via boto3
-simplesingletable==5.0.0
+simplesingletable==5.3.0
     # via EditGuru (pyproject.toml)
-six==1.16.0
+six==1.17.0
     # via python-dateutil
 sniffio==1.3.1
     # via
     #   anyio
-    #   httpx
     #   openai
-supersullytools==10.1.0
+supersullytools==14.1.0
     # via EditGuru (pyproject.toml)
 toml==0.10.2
     # via bumpver
-tomli==2.1.0
+tomli==2.2.1
     # via
     #   build
     #   coverage
     #   pip-tools
     #   pytest
-tqdm==4.67.0
+tqdm==4.67.1
     # via openai
-twine==5.1.1
+twine==6.1.0
     # via EditGuru (pyproject.toml)
-types-awscrt==0.23.0
+types-awscrt==0.23.10
     # via botocore-stubs
-types-s3transfer==0.10.3
+types-s3transfer==0.11.2
     # via boto3-stubs
 typing-extensions==4.12.2
     # via
@@ -218,16 +217,16 @@ typing-extensions==4.12.2
     #   pydantic
     #   pydantic-core
     #   rich
-tzdata==2024.2
+tzdata==2025.1
     # via pandas
 ulid-py==1.1.0
     # via simplesingletable
-urllib3==2.2.3
+urllib3==2.3.0
     # via
     #   botocore
     #   requests
     #   twine
-wheel==0.45.0
+wheel==0.45.1
     # via pip-tools
 zipp==3.21.0
     # via importlib-metadata
